# AndroidKivyApp

./: .gitignore  README.md  buildozer.spec  kivy-reloader.toml  main.py  pyproject.toml
.buildozer/: state.db
debugStorage/: storage.sqlite
mobileApp/: __init__.py  budgetAssistantApp.py  db_schema.py
mobileApp/comps/: __init__.py  utils.py
mobileApp/comps/filteredTextInput/: filteredTextInput.py
mobileApp/screens/: __init__.py  main_manager.kv  main_manager.py  main_screen.kv  main_screen.py
mobileApp/screens/add_vehicle_screen/: __init__.py  add_vehicle_screen.kv  add_vehicle_screen.py
mobileApp/screens/dashboard_screen/: __init__.py  dashboard_screen.kv  dashboard_screen.py
mobileApp/screens/documents_screen/: __init__.py  documents_screen.kv  documents_screen.py
mobileApp/screens/expenses_screen/: __init__.py  expenses_screen.kv  expenses_screen.py
mobileApp/screens/main_manager/: __init__.py  main_manager.kv  main_manager.py
mobileApp/screens/main_screen/: __init__.py  main_screen.kv  main_screen.py
mobileApp/screens/nav_manager/: __init__.py  nav_manager.kv  nav_manager.py
mobileApp/widgets/: __init__.py
mobileApp/widgets/filteredTextInput/: __init__.py
mobileApp/widgets/filtered_text_input/: __init__.py  filtered_text_input.py
mobileApp/widgets/top_bar/: top_bar.kv  top_bar.py
